feat: add games

--- a/apps/score-service/package.json
+++ b/apps/score-service/package.json
@@ -38,6 +38,7 @@
     "@repo/playwright-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/vitest-config": "workspace:*",
+    "@repo/messaging": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
