--- a/apps/stats-service/tsconfig.json
+++ b/apps/stats-service/tsconfig.json
@@ -8,7 +8,8 @@
       "@/*": ["*"]
     },
     "types": ["vitest/globals"],
-    "composite": true
+    "composite": true,
+    "incremental": true
   },
   "include": ["src"]
 }
