--- a/apps/game-service/Dockerfile
+++ b/apps/game-service/Dockerfile
@@ -10,7 +10,7 @@ RUN pnpm install --frozen-lockfile
 
 RUN pnpm --filter game-service db:generate
 
-RUN pnpm --filter game-service build
+RUN pnpm --filter game-service... build
 
 WORKDIR /app/apps/game-service
 
