--- a/apps/score-service/package.json
+++ b/apps/score-service/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/server.js",
     "db:generate": "pnpm prisma generate --schema prisma/schema.prisma",
     "db:push": "prisma db push",
@@ -32,21 +32,22 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "prisma": "^6.6.0",
     "@playwright/test": "^1.52.0",
     "@repo/eslint-config": "workspace:*",
+    "@repo/messaging": "workspace:*",
     "@repo/playwright-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/vitest-config": "workspace:*",
-    "@repo/messaging": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "@vitest/ui": "^3.1.1",
     "eslint": "^9.25.0",
     "playwright": "^1.51.1",
+    "prisma": "^6.6.0",
     "supertest": "^7.1.0",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "5.8.2",
