--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS base
+FROM node:18-alpine
 
 WORKDIR /app
 
@@ -8,18 +8,8 @@ COPY . .
 
 RUN pnpm install --frozen-lockfile
 
-RUN pnpm --filter web build
+RUN pnpm --filter web... build
 
-FROM node:18-alpine AS runner
-
-WORKDIR /app
-
-RUN npm install -g pnpm
-
-COPY --from=base /app/apps/web/ ./
-COPY --from=base /app/node_modules ./node_modules
-COPY --from=base /app/packages ./packages
-
-EXPOSE 3000
+WORKDIR /app/apps/web
 
 CMD ["pnpm", "start"]
