--- a/apps/game-service/package.json
+++ b/apps/game-service/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "build": "tsc && tsc-alias",
+    "start": "node -r tsconfig-paths/register dist/server.js",
     "db:generate": "pnpm prisma generate --schema prisma/schema.prisma",
     "db:push": "prisma db push",
     "test": "vitest run",
@@ -32,7 +32,6 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "prisma": "^6.6.0",
     "@playwright/test": "^1.52.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/playwright-config": "workspace:*",
@@ -44,8 +43,10 @@
     "@vitest/ui": "^3.1.1",
     "eslint": "^9.25.0",
     "playwright": "^1.51.1",
+    "prisma": "^6.6.0",
     "supertest": "^7.1.0",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "5.8.2",
