chore: add db seeding docker entrypoint

--- a/apps/game-service/package.json
+++ b/apps/game-service/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && tsc-alias",
     "start": "node -r tsconfig-paths/register dist/server.js",
     "db:generate": "pnpm prisma generate --schema prisma/schema.prisma",
-    "db:push": "prisma db push",
+    "db:push": "pnpm prisma db push",
+    "db:seed": "ts-node --transpile-only prisma/seed.ts",
     "test": "vitest run",
     "test:dev": "vitest watch",
     "test:ui": "vitest --ui",
@@ -45,6 +46,7 @@
     "playwright": "^1.51.1",
     "prisma": "^6.6.0",
     "supertest": "^7.1.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
