--- a/apps/game-service/Dockerfile
+++ b/apps/game-service/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:18-alpine
 
+RUN apk add --no-cache postgresql-client
+
 WORKDIR /app
 
 RUN npm install -g pnpm
@@ -12,6 +14,10 @@ RUN pnpm --filter game-service db:generate
 
 RUN pnpm --filter game-service... build
 
+RUN chmod +x ./apps/game-service/docker-entrypoint.sh
+
 WORKDIR /app/apps/game-service
+
+ENTRYPOINT ["./docker-entrypoint.sh"]
 
 CMD ["pnpm", "start"]
