chore: update docker setup

--- a/apps/stats-service/Dockerfile
+++ b/apps/stats-service/Dockerfile
@@ -4,7 +4,16 @@ WORKDIR /app
 
 RUN npm install -g pnpm
 
-COPY . .
+COPY pnpm-workspace.yaml .
+COPY turbo.json .
+COPY package.json .
+COPY pnpm-lock.yaml .
+
+COPY apps/stats-service apps/stats-service
+COPY packages/logger packages/logger
+COPY packages/messaging packages/messaging
+COPY packages/schemas packages/schemas
+COPY packages/typescript-config packages/typescript-config
 
 RUN pnpm install --frozen-lockfile
 
