--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
 # Ignore node_modules from host (will be reinstalled in container)
+
 **/node_modules
 **/build
 
@@ -7,15 +8,18 @@
 .env -->
 
 # Ignore OS and IDE files
+
 .DS_Store
 Thumbs.db
 .vscode
 .idea
 
 # Ignore logs and coverage
-*.log
+
+\*.log
 logs
-**/coverage
+\*\*/coverage
 
 # Ignore lockfiles not used by Docker build
+
 pnpm-lock.yml
