--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Login to Amazon ECR
         run: |
           aws ecr get-login-password --region $AWS_REGION \
-            | docker login --username $EC2_USER --password-stdin $ECR_REGISTRY
+            | docker login --username AWS --password-stdin $ECR_REGISTRY
 
       - name: Build and Push Docker Images
         run: |
@@ -56,7 +56,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/retro-arcade-leaderboard
             git pull origin main
-            aws ecr get-login-password --region $AWS_REGION | docker login --username $EC2_USER --password-stdin $ECR_REGISTRY
+            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
             docker-compose pull
             docker-compose up -d
           EOF
