--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,6 @@ jobs:
             git pull origin main &&
             aws ecr get-login-password --region ${{ secrets.AWS_REGION }} |
               sudo docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }} &&
-            . sudo docker-compose pull &&
+              sudo docker-compose pull &&
             sudo docker-compose up -d
           "
