chore: add docker down cmd in steps

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,7 @@ jobs:
             git pull origin main &&
             aws ecr get-login-password --region ${{ secrets.AWS_REGION }} |
               docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }} &&
+            docker-compose down &&
             docker-compose pull &&
             docker-compose up -d
           "
