--- a/apps/game-service/package.json
+++ b/apps/game-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
     "build": "tsc && tsc-alias",
-    "start": "node -r tsconfig-paths/register dist/server.js",
+    "start": "node dist/server.js",
     "db:generate": "pnpm prisma generate --schema prisma/schema.prisma",
     "db:push": "pnpm prisma db push",
     "db:seed": "ts-node --transpile-only prisma/seed.ts",
