chore: update game-service

--- a/apps/game-service/Dockerfile
+++ b/apps/game-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18-alpine
 
-RUN apk add --no-cache postgresql-client
+# RUN apk add --no-cache postgresql-client
 
 WORKDIR /app
 
@@ -23,10 +23,10 @@ RUN pnpm --filter game-service db:generate
 
 RUN pnpm --filter game-service... build
 
-RUN chmod +x ./apps/game-service/docker-entrypoint.sh
+# RUN chmod +x ./apps/game-service/docker-entrypoint.sh
 
 WORKDIR /app/apps/game-service
 
-ENTRYPOINT ["./docker-entrypoint.sh"]
+# ENTRYPOINT ["./docker-entrypoint.sh"]
 
-# CMD ["pnpm", "start"]
+CMD ["pnpm", "start"]
