--- a/apps/game-service/Dockerfile
+++ b/apps/game-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18-alpine
 
-RUN apk add --no-cache postgresql-client
+# RUN apk add --no-cache postgresql-client
 
 WORKDIR /app
 
@@ -21,10 +21,12 @@ RUN pnpm install --frozen-lockfile
 
 RUN pnpm --filter game-service db:generate
 
+RUN pnpm --filter game-service... build
+
+# RUN chmod +x ./apps/game-service/docker-entrypoint.sh
+
 WORKDIR /app/apps/game-service
-RUN pnpm build
-RUN ls -la dist
 
-RUN chmod +x ./docker-entrypoint.sh
+# ENTRYPOINT ["./docker-entrypoint.sh"]
 
-ENTRYPOINT ["./docker-entrypoint.sh"]
+CMD ["pnpm", "start"]
