--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,12 +12,9 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.4",
     "next": "^15.3.0",
-    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.4"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.52.0",
@@ -28,7 +25,10 @@
     "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "3.4.3",
     "typescript": "5.8.2",
     "vitest": "^3.1.2"
   }
